[Finish #24700709] fix globalNav position difference between firefox and chrome. difference between default line-height causes it. spacing with mergin and padding not line-height because header is not a type of article.

--- a/_sass/sunlight/_header.sass
+++ b/_sass/sunlight/_header.sass
@@ -1,4 +1,8 @@
 /* header part, including siteName, description and globalNavi */
+#header
+  line-height: 1
+  padding-top: 0.5em
+
 p.siteName
   margin-top: 0px
   font-size: 72px
@@ -31,7 +35,7 @@ span.title-decoration
 // globalNavi is navigations under siteName
 #globalNavi
   font-size: 24px
-  margin-top: 0px
+  margin-top: 0.5em
   padding: 0
 
   li
