--- a/css/sunlight.css
+++ b/css/sunlight.css
@@ -120,6 +120,10 @@ p.return {
     -webkit-border-radius: 10px; }
 
 /* header part, including siteName, description and globalNavi */
+#header {
+  line-height: 1;
+  padding-top: 0.5em; }
+
 p.siteName {
   margin-top: 0px;
   font-size: 72px;
@@ -146,7 +150,7 @@ span.title-decoration {
 
 #globalNavi {
   font-size: 24px;
-  margin-top: 0px;
+  margin-top: 0.5em;
   padding: 0; }
   #globalNavi li {
     margin-right: 4px;
